Bug 322920 - JPG images don't open rotated correctly
Summary: JPG images don't open rotated correctly
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.16.5
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-28 17:58 UTC by Edward
Modified: 2013-10-11 09:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.0
Sentry Crash Report:


Attachments
Example photo that opens upside-down (1.64 MB, image/jpeg)
2013-07-28 18:04 UTC, Edward
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Edward 2013-07-28 17:58:52 UTC
JPEG images show the correct orientation in Dolphin previews, but Okular opens some images rotated 90 degrees.

Reproducible: Always

Steps to Reproduce:
1. Double-click on an image in Dolphin to open it in Okular
- Note that this only happens for some images.
Actual Results:  
Image opens rotated 90 degrees.

Expected Results:  
Image open upright as per Dolphin preview.
Comment 1 Edward 2013-07-28 18:04:12 UTC
Created attachment 81405 [details]
Example photo that opens upside-down

This photo displays correctly in Dolphin, but opens upside-down in Okular (rotated 180 degrees).
Comment 2 Edward 2013-07-28 18:10:58 UTC
I suspect this is due to the EXIF orientation value not being used by Okular. Many cameras, including iPhone, rely on this value to indicate which way a picture ought to be displayed.
Comment 3 Albert Astals Cid 2013-07-28 21:58:02 UTC
Right.

OTOH we open jpeg images because "it's virutally free", but tbh using okular to view jpeg images is a bit weird :D So personally I don't think I'll have time to fix this issue (there are much more pressing issues imo)
Comment 4 Fabio D'Urso 2013-10-11 09:10:56 UTC
Git commit 26c257202d5741f040cdc14626c3fbf24943e93d by Fabio D'Urso.
Committed on 08/10/2013 at 14:30.
Pushed by fabiod into branch 'master'.

kimgio generator: Apply transformations dictated by Exif metadata
FIXED-IN: 4.12.0
REVIEW: 111793

M  +6    -1    generators/CMakeLists.txt
M  +7    -3    generators/kimgio/CMakeLists.txt
M  +14   -0    generators/kimgio/generator_kimgio.cpp
A  +-    --    generators/kimgio/tests/data/testExifOrientation-0.jpg
A  +-    --    generators/kimgio/tests/data/testExifOrientation-0mirror.jpg
A  +-    --    generators/kimgio/tests/data/testExifOrientation-180.jpg
A  +-    --    generators/kimgio/tests/data/testExifOrientation-180mirror.jpg
A  +-    --    generators/kimgio/tests/data/testExifOrientation-270.jpg
A  +-    --    generators/kimgio/tests/data/testExifOrientation-270mirror.jpg
A  +-    --    generators/kimgio/tests/data/testExifOrientation-90.jpg
A  +-    --    generators/kimgio/tests/data/testExifOrientation-90mirror.jpg
A  +-    --    generators/kimgio/tests/data/testExifOrientation-noexif.jpg
A  +-    --    generators/kimgio/tests/data/testExifOrientation-unspecified.jpg
A  +101  -0    generators/kimgio/tests/kimgiotest.cpp     [License: GPL (v2+)]

http://commits.kde.org/okular/26c257202d5741f040cdc14626c3fbf24943e93d