kimgio generator: Apply transformations dictated by Exif metadata

BUG: 322920
FIXED-IN: 4.12.0
REVIEW: 111793